@@ -1,3 +1,12 @@
+2008-10-05  Hans Lambermont  <hans@lambermont.dyndns.org>
+
+	* disk/lvm.c (grub_lvm_scan_device): Allocate buffer space for the
+	circular metadata worst case scenario. If the metadata is circular
+	then copy the wrap in place.
+	* include/grub/lvm.h: Add GRUB_LVM_MDA_HEADER_SIZE, from the LVM2
+	project lib/format_text/layout.h
+	Circular metadata bug found and patch debugged by Jan Derk Gerlings.
+
 2008-10-03  Felix Zielcke  <fzielcke@z-51.de>
 
 	* util/i386/pc/grub-install.in: Source grub-mkconfig_lib instead of update-grub_lib.
